@@ -47,20 +47,20 @@ public class TableXmlHandler extends DefaultHandler {
    */
   public static boolean verbose = false;
 
-  private String errorInMethod = String2.ERROR + " in TableXmlHandler:\n";
+  private static final String errorInMethod = String2.ERROR + " in TableXmlHandler:\n";
 
   // set by constructor
-  private Table table;
-  private String rowStack[];
-  private int rowStackSize;
-  private String[] rowElementAttributes;
+  private final Table table;
+  private final String[] rowStack;
+  private final int rowStackSize;
+  private final String[] rowElementAttributes;
 
   // reset by startDocument
   private int row;
   private boolean inRow;
   private StringArray nameStack;
   private StringArray uniqueNameStack;
-  private ArrayList<HashSet> hashsetStack;
+  private ArrayList<HashSet<String>> hashsetStack;
   private StringBuilder characters;
 
   /**
@@ -79,8 +79,8 @@ public class TableXmlHandler extends DefaultHandler {
     this.table = table;
     if (rowElementAttributes == null) rowElementAttributes = new String[0];
     this.rowElementAttributes = rowElementAttributes;
-    for (int i = 0; i < rowElementAttributes.length; i++) {
-      table.addColumn(rowElementAttributes[i], new StringArray());
+    for (String rowElementAttribute : rowElementAttributes) {
+      table.addColumn(rowElementAttribute, new StringArray());
     }
 
     // set up the rowStack which identifies the start of a row
@@ -111,7 +111,7 @@ public class TableXmlHandler extends DefaultHandler {
     // recreating the objects frees memory if the objects were previously huge
     nameStack = new StringArray();
     uniqueNameStack = new StringArray();
-    hashsetStack = new ArrayList();
+    hashsetStack = new ArrayList<>();
     characters = new StringBuilder();
   }
 
@@ -142,7 +142,7 @@ public class TableXmlHandler extends DefaultHandler {
     if (verbose) String2.log("Start element: " + qName);
 
     // create the hashset for this element's children
-    hashsetStack.add(new HashSet());
+    hashsetStack.add(new HashSet<>());
 
     // is this the start of a row?
     if (nameStack.size() == rowStackSize) {
@@ -249,7 +249,7 @@ public class TableXmlHandler extends DefaultHandler {
     // remove items from stacks
     nameStack.remove(nameStack.size() - 1);
     uniqueNameStack.remove(uniqueNameStack.size() - 1);
-    hashsetStack.remove(hashsetStack.size() - 1);
+    hashsetStack.removeLast();
 
     // and finally, always clear 'characters', since the characters were before this tag
     characters.setLength(0);
